--- a/templates/integration/user/login.html
+++ b/templates/integration/user/login.html
@@ -142,8 +142,9 @@ body {
 <div class="login-page">
   <div class="form">
     <form class="login-form"  method="post" action="{% url "user.login" %}">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+        {% csrf_token %}
+      <input type="text" name="username" placeholder="username"/>
+      <input type="password" name="password" placeholder="password"/>
         <input type="submit" value="login"/>
       
       <p class="message">Not registered? <a href="#">Create an account</a></p>
